ran cleanup manually